[project]
name = "healthcare-triage-env"
version = "0.1.0"
description = "Healthcare triage environment with FastAPI endpoints"
authors = [{ name = "Shyamasravani" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
